--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -85,3 +85,12 @@ body {
     display: inline-block;
     padding: 0px 7px;
   }
+
+
+  .flexContainer {
+    width: 33% 33% 33%;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  
