--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,96 +1,133 @@
-.inline-block {
-    display: inline-block;
-    vertical-align: top;
-}
-
-.logo {
-    width: 23%;
-    padding: 1%;
-    text-align: center;
-}
-
-nav {
-    background-color: #46DFE9;
-    width:76%;
-    padding: 1%;
-    text-align: justify;
-}
-
-ul {
-    color:black;
-    width: 50%;
-    margin-left: atuo;
-}
-
-.heroImg {
-    height: 400px;
-    width: 400px;
-    padding: 25px;
-    padding: 100px 15px;
-}
-
 .content {
-    max-width: 300px;
-    margin: 0 auto;
-    padding: 50px;
-    background-color: #FFFFFF;
-    text-align: center;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 50px;
+  background-color: #FFFFFF;
+  text-align: center;
 }
 
-footer {
-    padding: 20px;
-}
-
-footer ul {
-    color: white;
-    display: inline-block;
-    vertical-align: top;
-    list-style: none;
-    padding-left: 5px;
+.content img {
+  max-width: 300px;
+  max-height:300px;
 }
 
 body {
-    background-color: black;
-    background-size: cover;
-    background-repeat: no-repeat;
-    margin: 0;
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0;
+}
+.mainNav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-  header {
-    background-color: #373738;
-    padding: 15px;
-  }
-  header ul {
-    float: right;
-    color: white;
-  }
-  header li {
-    display: inline-block;
-    padding: 0px 5px;
-  }
-  header p {
-    display: inline-block;
-  
-  }
-  
-  button {
-    padding: 15px;
-    background-color: #373738;
-    color: white;
-    font-size: 15px;
-    border-radius: 4px;
-  }
-  
-  footer li {
-    display: inline-block;
-    padding: 0px 7px;
-  }
+.topNav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 40px;
+  width: 80%;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+header {
+  background-color: #46DFE9;
+  Height: 186px;
+}
+header ul {
+  color: black;
+}
+
+footer ul {
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+footer li {
+  padding: 0px 7px;
+}
+
+.content button {
+  padding: 15px;
+  background-color: #373738;
+  color: white;
+  font-size: 15px;
+  border-radius: 4px;
+}
 
 
-  .flexContainer {
-    width: 33% 33% 33%;
-    margin: 0 auto;
-    padding: 20px;
-  }
+.flexContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  /* width: 33% 33% 33%;
+  margin: 0 auto;
+  padding: 20px; */
+}
 
-  
+.flexContainer img {
+  width: 100px;
+  height: 100px;
+}  
+
+.flexContainer p {
+  color: white;
+}
+
+.mySkills h1 {
+  display: flex;
+  justify-content: center;
+}
+
+
+h1 {
+  color: white;
+}
+h3 {
+  color: white;
+}
+h4 {
+  color: white;
+}
+
+.myWork p {
+  color: white;
+}
+
+.myWork h1 {
+  display: flex;
+  justify-content: center;
+}
+
+.workGrid button {
+  padding: 15px;
+  background-color: white;
+  color: grey;
+  font-size: 15px;
+  border-radius: 4px;
+}
+
+.workGrid img {
+  width: 400px;
+  height: 200px;
+}
+
+.workGrid {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: 50% 50%;
+}
+
+.myWork h3 {
+  display: flex;
+  justify-content: center;
+}
